<resources>
    <string name="app_name">FarmaZen</string>
    <string name="hint_editTextEmailAddress">Correo Electrónico</string>
    <string name="hint_txtPassword">Contraseña</string>
    <string name="btnlogin_text">Autenticar</string>
    <string name="login_textView">¿No tienes una cuenta?</string>
    <string name="login_textView2">Registrar</string>
    <string name="item_logout">Cerrar Sesion</string>
    <string name="buttonViewCart">Ver Canasta</string>
    <string name="buttonViewHistory">Ver Historial</string>
    <string name="etRegisterEmail">Correo electrónico</string>
    <string name="etRegisterPassword">Contraseña</string>
    <string name="btnRegister">Registrarse</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="textViewTotal">Total: 0 USD</string>
    <string name="buttonCompra">Comprar</string>
    <string name="btnAgregar">Agregar</string>
</resources>