<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="@string/etRegisterEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/colorTextIcons"
    android:background="@color/colorSurface"/>

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:hint="@string/etRegisterPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/colorTextIcons"
    android:background="@color/colorSurface"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/btnRegister"
        android:textColor="@color/colorTextIcons"
    android:background="?attr/colorPrimary"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/btnLogin"
        android:textColor="@color/colorTextIcons"
    android:background="@color/colorPrimary"/>

</RelativeLayout>
